manifests/argocd/apps/paperless-ng/overlays/titan/apps/ingress-internet.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless-ng-internet

  namespace: paperless
  annotations:
    nginx.ingress.kubernetes.io/auth-signin: https://auth.janz.digital/oauth2/start?rd=https://$best_http_host$request_uri
    nginx.ingress.kubernetes.io/auth-url: https://auth.janz.digital/oauth2/auth
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization
    nginx.ingress.kubernetes.io/configuration-snippet: |
      auth_request_set $name_upstream_1 _oauth2_proxy;

      access_by_lua_block {
        if ngx.var.name_upstream_1 ~= "" then
          ngx.header["Set-Cookie"] = "_oauth2_proxy=" .. ngx.var.name_upstream_1 .. ngx.var.auth_cookie:match("(; .*)")
        end
      }
    argocd.argoproj.io/sync-wave: "111"
spec:
  ingressClassName: nginx
  rules:
  - host: paperless.janz.digital
    http:
      paths:
      - backend:
          service:
            name: paperless-ng
            port:
              number: 8000
        path: /
        pathType: Prefix
